# lang_agent_basics

./: .gitignore  README.md  chain_app.py  great_songs.docx  ideas.txt  jokes.txt  main.py  motivation.txt  playlist.txt  pyproject.toml  songsplay.txt  test.json  test.py  test_supervisor.py
agents/: basic_chatbot.py  basic_logs.py  lchain_model.py  stream_agent.py  supervisor.py
funny/: phrases.txt  queen.txt
src/: custom.py  prebuild.py
src/modules/: fuse_config.py  graphs.py  llm_client.py
src/modules/config/: agent.yaml
src/modules/tools/: files.py  songs.py
test/: chain_supervisor.py  graph_agent.py  quick_start.py  supervisor.py  tutorial_agent.py
